    incompatible with previously behavior, but is much nicer
  - =--radius= and =--where= work even without =--sampled=

- [[file:mrcal-calibrate-cameras.html][=mrcal-calibrate-cameras=]] and [[file:mrcal-python-api-reference.html#-seed_stereographic][=mrcal.seed_stereographic()=]] can accept multiple
  estimates for focal length: one estimate per camera. Useful in seeding
  calibration problems containing multiple disparate cameras

* Migration notes 2.1 -> 2.2
The vast majority of existing usage remains the same, but some updates described
above will require a code change:

- Most of the Python API functions now use keyword-only arguments for the
  non-essential arguments. Any calls that used too many positional arguments
  will need to be clarified with keywords

- =mrcal.pq_from_Rt()= calls must be replaced with [[file:mrcal-python-api-reference.html#-qt_from_Rt][=mrcal.qt_from_Rt()=]], and the
  caller must use the [[file:conventions.org::#pose-representation][=qt= transform representation]]

- =mrcal.Rt_from_pq()= calls must be replaced with [[file:mrcal-python-api-reference.html#-Rt_from_qt][=mrcal.Rt_from_qt()=]], and the
  caller must use the [[file:conventions.org::#pose-representation][=qt= transform representation]]

- =mrcal-stereo --show-geometry= is now invoked as =mrcal-stereo --viz geometry=

- The =mrcal-to-cameramodel= tool was renamed to [[file:mrcal-from-cahvor.html][=mrcal-from-cahvor=]]

- A C header was renamed: =basic_geometry.h= -> [[https://www.github.com/dkogan/mrcal/blob/master/basic_geometry.h][=basic_geometry.h=]], requiring an
  =#include= update

- The [[file:mrcal-python-api-reference.html#-compute_chessboard_corners][=mrcal.compute_chessboard_corners()=]] function API was changed. If you're
  using this, please see the documentation

- The [[file:mrcal-convert-lensmodel.html][=mrcal-convert-lensmodel=]] tool writes the output model to a file on disk,
  not to stdout as it has previously. New usage will need to be adjusted